<resources>
    <string name="app_name">Foodz</string>
    <string name="a_desc">Grilling involves cooking food on a rack over a heat source, usually a charcoal fire or ceramic briquettes heated by gas flames. Direct heat quickly sears the outside of food, producing distinctive robust, roasted―and sometimes pleasantly charred―flavors and a nice crust.</string>
    <string name="b_desc">A dessert is a type of food that is eaten after lunch or dinner, and sometimes after a light meal or snack. It is usually a sweet food, like ice cream, cookies, and cakes. In some countries, cheeses such as Brie cheese and fruit are served as dessert. Some desserts are decorated, like birthday cakes.</string>
    <string name="c_desc">Italian cuisine is a Mediterranean cuisine consisting of the ingredients, recipes and cooking techniques developed across the Italian Peninsula since antiquity, and later spread around the world together with waves of Italian diaspora</string>
    <string name="d_desc">Baked goods are foods made from dough or batter and cooked by baking, a method of cooking food that uses prolonged dry heat, normally in an oven, but also in hot ashes, or on hot stones</string>
    <string name="e_desc">A milkshake (sometimes called a shake in the United States) is a sweet drink made by blending milk, ice cream, and flavorings or sweeteners such as butterscotch, caramel sauce, chocolate syrup, fruit syrup, or whole fruit into a thick, sweet, cold mixture.</string>
    <string name="enter_phone_no">Enter phone no</string>
    <string name="otp">OTP</string>
    <string name="verify_mobile_number_via_otp">Verify Mobile Number Via OTP</string>
    <string name="login">Login</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="cancel">cancel</string>
    <string name="enter_otp">ENTER OTP</string>
    <string name="get_otp">Get OTP</string>
    <string name="get_started"><![CDATA[Get Started>>]]></string>
    <string name="foodie_s_village">Foodie\'s Village</string>
    <string name="Grilled">Grilled</string>
    <string name="app_name1">FoodApp</string>
    <string name="rating">Rating</string>
    <string name="showfoodimage">Food Image</string>
    <string name="float_cake_vietnam">Float Cake Vietnam</string>
    <string name="textview">TextView</string>
    <string name="Username_txtview">Username</string>
    <string name="Password_txtview">Password</string>
    <string name="Login_btn">Login</string>
    <string name="Register_btn">Register</string>
    <string name="AboutApp">This is the business end of the food delivery application.
        The customer app is the one that the customer is going to use. That is the briefest description for this app.
The customer app helps the customer to access the online food ordering platforms, search for the right restaurant or the dish they want to order, place their orders and pay easily.
There are many features you can implement in the app to make it easy and exciting to use. Here is a list of some absolutely necessary and then some additional features of food delivery app your customer app needs.</string>
</resources>