<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    app:cardCornerRadius="15dp"
    android:elevation="5dp"
    android:layout_marginTop="16dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="12dp"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/food_image"
            android:layout_width="102dp"
            android:layout_height="84dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/showfoodimage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/iteem" />

        <TextView
            android:id="@+id/name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/semibold"
            android:text="@string/float_cake_vietnam"
            android:textColor="#091020"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="@+id/restorant_name"
            app:layout_constraintTop_toBottomOf="@+id/restorant_name" />

        <TextView
            android:visibility="invisible"
            android:id="@+id/rating"
            android:layout_width="52dp"
            android:layout_height="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="4dp"
            android:fontFamily="@font/semibold"
            android:text="$6.05"
            android:textColor="#FF6813"
            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/restorant_name"
            android:layout_width="48dp"
            android:layout_height="4dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/regular"
            android:text="@string/textview"
            android:textColor="#F06941"
            android:textSize="12sp"
            android:visibility="invisible"
            app:layout_constraintStart_toEndOf="@+id/food_image"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/regular"
            android:text="4.5"
            android:textColor="#FF6813"
            app:layout_constraintBottom_toBottomOf="@+id/imageView4"
            app:layout_constraintStart_toEndOf="@+id/imageView4"
            app:layout_constraintTop_toTopOf="@+id/imageView4"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="4dp"
            android:contentDescription="@string/rating"
            android:text="Price"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/name"
            app:layout_constraintTop_toBottomOf="@+id/name"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>

