<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    tools:context=".SharedPrefLogin">

    <TextView
        android:id="@+id/Username_txtview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="104dp"
        android:editable="false"
        android:text="@string/Username_txtview"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/Username_input"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Username_txtview"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="32dp"
        android:enabled="true" />

    <TextView
        android:id="@+id/Password_txtview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Username_input"
        android:layout_alignStart="@+id/Username_input"
        android:layout_alignLeft="@+id/Username_input"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="50dp"
        android:text="@string/Password_txtview"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/Password_input"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Password_txtview"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="32dp"
        android:enabled="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        android:text="@string/Login_btn"
        android:id="@+id/Login_btn"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        />

    <Button
        android:id="@+id/Register_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Login_btn"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="26dp"
        android:layout_marginRight="80dp"
        android:text="@string/Register_btn" />

    <Button
        android:id="@+id/forget_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Login_btn"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="79dp"
        android:layout_marginLeft="79dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="81dp"
        android:layout_marginRight="81dp"
        android:text="Forgot password" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="362dp"
        android:layout_height="66dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="665dp"
        android:gravity="center"
        android:text="Enter Your Credientials"
        android:textSize="24sp" />


</RelativeLayout>